# spc418

./: README.md
catbot/: README.md  catbot.gv  manifest.xml
catbot/config/: catbot_gazebo_control.yaml
catbot/launch/: display.launch  gazebo.launch  gazebo_with_controllers.launch
catbot/robots/: catbot.URDF
catbot_control/: CMakeLists.txt  package.xml
catbot_control/config/: catbot_wheel_joint_controllers.yaml  diff_catbot_kinematics.yaml
catbot_control/include/: Odometer.h
catbot_control/include/Dict/: dict.h
catbot_control/launch/: diff_catbot_gazebo_perception.launch  diff_catbot_kinematics.launch  gazebo_control.launch
catbot_control/src/: 4WD_control.cpp
catbot_control/src/kinematics/: kinematic_model.cpp
catbot_control/src/teleop/: catbot_teleop.cpp
catbot_description/: CMakeLists.txt
catbot_description/launch/: display.launch  gazebo.launch
catbot_description/launch/diff_catbot/: diff_catbot_display.launch  diff_catbot_gazebo.launch  diff_catbot_gazebo_willow_garage_world.launch
catbot_description/launch/fourWD_catbot/: fourWD_catbot_display.launch  fourWD_catbot_gazebo_willow_garage_world.launch
catbot_description/urdf/: catbot.urdf.xacro  diff_catbot_kinematics.urdf  diff_catbot_perception.urdf  fourWD_catbot.urdf.xacro
catbot_description/urdf/include/: camera.urdf.xacro  laser_scanner.urdf.xacro  wheel.urdf.xacro
catbot_gazebo_plugins/src/four-wheeled-drive/: gazebo_ros_four_wheeled_drive.cpp
launch/: display.launch  gazebo.launch  gazebo_with_controllers.launch
meshes/: Base.STL
robots/: catbot.URDF
